--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "puppeteer": "^21.5.0",
     "simple-json-db": "^2.0.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
