--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "dev": "SET NODE_ENV=dev&&nodemon src/main.ts --no-stdin",
     "build": "tsc",
     "exec": "ts-node src/main.ts",
+    "ts": "ts-node src/ts.ts",
+    "fiddle": "ts-node fiddle.ts",
     "test": "vitest --run --reporter verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.13.0",
+    "@tensorflow/tfjs-node": "^4.13.0",
     "commander": "^11.1.0",
+    "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
+    "express": "^4.18.2",
     "lowdb": "^6.1.1",
+    "node-fetch": "^2.7.0",
     "node-html-parser": "^6.1.10",
     "nodemon": "^2.0.22",
     "puppeteer": "^21.5.0",
